- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.5.0
- 
    None
- 
        3da7df93366b05bccbd319fd4232574722866b6c
I get this compile error that seems to have to be with GL
This is a different error now, but is still seems to be related to GL
10502/10508] CXX obj/src/core/QtWebEngineCore.network_delegate_qt.o
[10503/10508] CXX obj/src/core/QtWebEngineCore.chromium_gpu_helper.o
FAILED: c++ -MMD -MF obj/src/core/QtWebEngineCore.gl_surface_qt.o.d -DV8_DEPRECATION_WARNINGS -DTOOLKIT_QT -D_FILE_OFFSET_BITS=64 -DNO_TCMALLOC -DCHROMIUM_BUILD -DTOOLKIT_VIEWS=1 -DUI_COMPOSITOR_IMAGE_TRANSPORT -DUSE_AURA=1 -DUSE_DEFAULT_RENDER_THEME=1 -DUSE_LIBJPEG_TURBO=1 -DUSE_X11=1 -DENABLE_ONE_CLICK_SIGNIN -DENABLE_PRE_SYNC_BACKUP -DUSE_XI2_MT=2 -DENABLE_REMOTING=1 -DENABLE_WEBRTC=1 -DENABLE_PEPPER_CDMS -DENABLE_CONFIGURATION_POLICY -DENABLE_NOTIFICATIONS -DUSE_UDEV -DDONT_EMBED_BUILD_METADATA -DENABLE_TASK_MANAGER=1 -DENABLE_EXTENSIONS=1 -DENABLE_PLUGINS=1 -DENABLE_SESSION_SERVICE=1 -DENABLE_THEMES=1 -DENABLE_AUTOFILL_DIALOG=1 -DENABLE_BACKGROUND=1 -DENABLE_GOOGLE_NOW=1 -DCLD_VERSION=2 -DCLD2_DATA_SOURCE=static -DENABLE_PRINTING=1 -DENABLE_BASIC_PRINTING=1 -DENABLE_PRINT_PREVIEW=1 -DENABLE_SPELLCHECK=1 -DENABLE_CAPTIVE_PORTAL_DETECTION=1 -DENABLE_APP_LIST=1 -DENABLE_SETTINGS_APP=1 -DENABLE_MANAGED_USERS=1 -DENABLE_MDNS=1 -DENABLE_SERVICE_DISCOVERY=1 -DENABLE_LOAD_COMPLETION_HACKS=1 -DQT_NO_KEYWORDS -DQ_FORWARD_DECLARE_OBJC_CLASS=QT_FORWARD_DECLARE_CLASS '-DQTWEBENGINEPROCESS_NAME="QtWebEngineProcess"' '-DQTWEBENGINECORE_VERSION_STR="5.5.0"' -DBUILDING_CHROMIUM -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_QUICK_LIB -DQT_GUI_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_WEBCHANNEL_LIB -DQT_CORE_LIB -D_STDC_CONSTANT_MACROS -D_STDC_FORMAT_MACROS '-DCHROMIUM_VERSION="40.0.2214.115"' -DGL_GLEXT_PROTOTYPES -DMOJO_USE_SYSTEM_IMPL -DLIBPEERCONNECTION_LIB=1 -DSK_ENABLE_INST_COUNT=0 -DSK_SUPPORT_GPU=1 '-DGR_GL_CUSTOM_SETUP_HEADER="GrGLConfig_chrome.h"' -DSK_ENABLE_LEGACY_API_ALIASING=1 -DSK_ATTR_DEPRECATED=SK_NOTHING_ARG1 -DGR_GL_IGNORE_ES3_MSAA=0 -DSK_WILL_NEVER_DRAW_PERSPECTIVE_TEXT -DSK_FM_NEW_MATCH_FAMILY_STYLE_CHARACTER=1 -DSK_SUPPORT_LEGACY_TEXTRENDERMODE -DSK_IGNORE_GPU_LAYER_HOISTING -DSK_USE_POSIX_THREADS -DU_USING_ICU_NAMESPACE=0 -DU_ENABLE_DYLOAD=0 -DU_STATIC_IMPLEMENTATION -DUSE_LIBPCI=1 -DUSE_GLIB=1 -DUSE_NSS=1 -DNDEBUG -DNVALGRIND -DDYNAMIC_ANNOTATIONS_ENABLED=0 -Igen -I/srcbuild/qtwebengine/src/3rdparty/chromium -I/srcbuild/qtwebengine/src/core -I/opt/include -I/opt/include/libdrm -I/usr/include -I/opt/include/QtQuick -I/opt/include/QtGui -I/opt/include/QtQml -I/opt/include/QtNetwork -I/opt/include/QtWebChannel -I/opt/include/QtCore -I/opt/include/QtQuick/5.5.0 -I/opt/include/QtQuick/5.5.0/QtQuick -I/opt/include/QtGui/5.5.0 -I/opt/include/QtGui/5.5.0/QtGui -I/opt/include/QtCore/5.5.0 -I/opt/include/QtCore/5.5.0/QtCore -I/srcbuild/qtwebengine/src/core/.moc -Igen/moc -Igen/net -Igen/chrome -I../../../src/3rdparty/chromium -I../../../src/3rdparty/chromium/skia/config -I../../../src/3rdparty/chromium/third_party/WebKit/Source -Igen/angle -I../../../src/3rdparty/chromium/third_party/WebKit -Igen/content/app/resources/ -I../../../src/3rdparty/chromium/third_party/skia/src/core -I../../../src/3rdparty/chromium/third_party/skia/include/core -I../../../src/3rdparty/chromium/third_party/skia/include/effects -I../../../src/3rdparty/chromium/third_party/skia/include/pdf -I../../../src/3rdparty/chromium/third_party/skia/include/gpu -I../../../src/3rdparty/chromium/third_party/skia/include/lazy -I../../../src/3rdparty/chromium/third_party/skia/include/pathops -I../../../src/3rdparty/chromium/third_party/skia/include/pipe -I../../../src/3rdparty/chromium/third_party/skia/include/ports -I../../../src/3rdparty/chromium/third_party/skia/include/utils -I../../../src/3rdparty/chromium/skia/ext -I../../../src/3rdparty/chromium/third_party/WebKit -I../../../src/3rdparty/chromium/third_party/icu/source/common -I../../../src/3rdparty/chromium/third_party/npapi -I../../../src/3rdparty/chromium/third_party/npapi/bindings -I../../../src/3rdparty/chromium/third_party/icu/source/i18n -Igen/ui/gl -I../../../src/3rdparty/chromium/third_party/mesa/src/include -I../../../src/3rdparty/chromium/v8/include -fstack-protector --param=ssp-buffer-size=4  -pthread -fno-strict-aliasing -Wno-unused-parameter -Wno-missing-field-initializers -fvisibility=hidden -pipe -fPIC -Wno-unused-local-typedefs -pipe -O2 -I/opt/include/libdrm -I/usr/include -fno-exceptions -W -D_REENTRANT -pthread -I/usr/include/glib-2.0 -I/usr/lib/i386-linux-gnu/glib-2.0/include -I/usr/include -I/usr/include -I/usr/include/freetype2 -I/usr/include -I/usr/include/freetype2 -Wno-format -Wno-unused-result -msse2 -mfpmath=sse -mmmx -m32 -O2 -fno-ident -fdata-sections -ffunction-sections -funwind-tables -fno-exceptions -fno-rtti -fno-threadsafe-statics -fvisibility-inlines-hidden -pipe -O2 -I/opt/include/libdrm -I/usr/include -fno-exceptions -Wall -W -D_REENTRANT -Wno-deprecated -std=gnu++11 -Wno-narrowing -Wno-literal-suffix  -c ../../../src/core/gl_surface_qt.cpp -o obj/src/core/QtWebEngineCore.gl_surface_qt.o
In file included from /opt/include/GL/gl.h:2055:0,
                 from /srcbuild/qtwebengine/src/3rdparty/chromium/ui/gl/gl_bindings.h:13,
                 from /srcbuild/qtwebengine/src/3rdparty/chromium/ui/gl/gl_surface_egl.h:18,
                 from ../../../src/core/gl_surface_qt.cpp:57:
/opt/include/GL/glext.h:468:19: error: conflicting declaration ‘typedef ptrdiff_t GLsizeiptr’
 typedef ptrdiff_t GLsizeiptr;
                   ^
In file included from /srcbuild/qtwebengine/src/3rdparty/chromium/gpu/command_buffer/service/context_group.h:16:0,
                 from /srcbuild/qtwebengine/src/3rdparty/chromium/content/common/gpu/gpu_command_buffer_stub.h:21,
                 from ../../../src/core/gl_surface_qt.cpp:53:
/srcbuild/qtwebengine/src/3rdparty/chromium/gpu/command_buffer/common/gles2_cmd_format.h:48:26: note: previous declaration as ‘typedef khronos_ssize_t GLsizeiptr’
 typedef khronos_ssize_t  GLsizeiptr;
                          ^
In file included from /opt/include/GL/gl.h:2055:0,
                 from /srcbuild/qtwebengine/src/3rdparty/chromium/ui/gl/gl_bindings.h:13,
                 from /srcbuild/qtwebengine/src/3rdparty/chromium/ui/gl/gl_surface_egl.h:18,
                 from ../../../src/core/gl_surface_qt.cpp:57:
/opt/include/GL/glext.h:469:19: error: conflicting declaration ‘typedef ptrdiff_t GLintptr’
 typedef ptrdiff_t GLintptr;
                   ^
In file included from /srcbuild/qtwebengine/src/3rdparty/chromium/gpu/command_buffer/service/context_group.h:16:0,
                 from /srcbuild/qtwebengine/src/3rdparty/chromium/content/common/gpu/gpu_command_buffer_stub.h:21,
                 from ../../../src/core/gl_surface_qt.cpp:53:
/srcbuild/qtwebengine/src/3rdparty/chromium/gpu/command_buffer/common/gles2_cmd_format.h:47:26: note: previous declaration as ‘typedef khronos_intptr_t GLintptr’
 typedef khronos_intptr_t GLintptr;
                          ^
FAILED: c++ -MMD -MF obj/src/core/QtWebEngineCore.chromium_gpu_helper.o.d -DV8_DEPRECATION_WARNINGS -DTOOLKIT_QT -D_FILE_OFFSET_BITS=64 -DNO_TCMALLOC -DCHROMIUM_BUILD -DTOOLKIT_VIEWS=1 -DUI_COMPOSITOR_IMAGE_TRANSPORT -DUSE_AURA=1 -DUSE_DEFAULT_RENDER_THEME=1 -DUSE_LIBJPEG_TURBO=1 -DUSE_X11=1 -DENABLE_ONE_CLICK_SIGNIN -DENABLE_PRE_SYNC_BACKUP -DUSE_XI2_MT=2 -DENABLE_REMOTING=1 -DENABLE_WEBRTC=1 -DENABLE_PEPPER_CDMS -DENABLE_CONFIGURATION_POLICY -DENABLE_NOTIFICATIONS -DUSE_UDEV -DDONT_EMBED_BUILD_METADATA -DENABLE_TASK_MANAGER=1 -DENABLE_EXTENSIONS=1 -DENABLE_PLUGINS=1 -DENABLE_SESSION_SERVICE=1 -DENABLE_THEMES=1 -DENABLE_AUTOFILL_DIALOG=1 -DENABLE_BACKGROUND=1 -DENABLE_GOOGLE_NOW=1 -DCLD_VERSION=2 -DCLD2_DATA_SOURCE=static -DENABLE_PRINTING=1 -DENABLE_BASIC_PRINTING=1 -DENABLE_PRINT_PREVIEW=1 -DENABLE_SPELLCHECK=1 -DENABLE_CAPTIVE_PORTAL_DETECTION=1 -DENABLE_APP_LIST=1 -DENABLE_SETTINGS_APP=1 -DENABLE_MANAGED_USERS=1 -DENABLE_MDNS=1 -DENABLE_SERVICE_DISCOVERY=1 -DENABLE_LOAD_COMPLETION_HACKS=1 -DQT_NO_KEYWORDS -DQ_FORWARD_DECLARE_OBJC_CLASS=QT_FORWARD_DECLARE_CLASS '-DQTWEBENGINEPROCESS_NAME="QtWebEngineProcess"' '-DQTWEBENGINECORE_VERSION_STR="5.5.0"' -DBUILDING_CHROMIUM -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_QUICK_LIB -DQT_GUI_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_WEBCHANNEL_LIB -DQT_CORE_LIB -D_STDC_CONSTANT_MACROS -D_STDC_FORMAT_MACROS '-DCHROMIUM_VERSION="40.0.2214.115"' -DGL_GLEXT_PROTOTYPES -DMOJO_USE_SYSTEM_IMPL -DLIBPEERCONNECTION_LIB=1 -DSK_ENABLE_INST_COUNT=0 -DSK_SUPPORT_GPU=1 '-DGR_GL_CUSTOM_SETUP_HEADER="GrGLConfig_chrome.h"' -DSK_ENABLE_LEGACY_API_ALIASING=1 -DSK_ATTR_DEPRECATED=SK_NOTHING_ARG1 -DGR_GL_IGNORE_ES3_MSAA=0 -DSK_WILL_NEVER_DRAW_PERSPECTIVE_TEXT -DSK_FM_NEW_MATCH_FAMILY_STYLE_CHARACTER=1 -DSK_SUPPORT_LEGACY_TEXTRENDERMODE -DSK_IGNORE_GPU_LAYER_HOISTING -DSK_USE_POSIX_THREADS -DU_USING_ICU_NAMESPACE=0 -DU_ENABLE_DYLOAD=0 -DU_STATIC_IMPLEMENTATION -DUSE_LIBPCI=1 -DUSE_GLIB=1 -DUSE_NSS=1 -DNDEBUG -DNVALGRIND -DDYNAMIC_ANNOTATIONS_ENABLED=0 -Igen -I/srcbuild/qtwebengine/src/3rdparty/chromium -I/srcbuild/qtwebengine/src/core -I/opt/include -I/opt/include/libdrm -I/usr/include -I/opt/include/QtQuick -I/opt/include/QtGui -I/opt/include/QtQml -I/opt/include/QtNetwork -I/opt/include/QtWebChannel -I/opt/include/QtCore -I/opt/include/QtQuick/5.5.0 -I/opt/include/QtQuick/5.5.0/QtQuick -I/opt/include/QtGui/5.5.0 -I/opt/include/QtGui/5.5.0/QtGui -I/opt/include/QtCore/5.5.0 -I/opt/include/QtCore/5.5.0/QtCore -I/srcbuild/qtwebengine/src/core/.moc -Igen/moc -Igen/net -Igen/chrome -I../../../src/3rdparty/chromium -I../../../src/3rdparty/chromium/skia/config -I../../../src/3rdparty/chromium/third_party/WebKit/Source -Igen/angle -I../../../src/3rdparty/chromium/third_party/WebKit -Igen/content/app/resources/ -I../../../src/3rdparty/chromium/third_party/skia/src/core -I../../../src/3rdparty/chromium/third_party/skia/include/core -I../../../src/3rdparty/chromium/third_party/skia/include/effects -I../../../src/3rdparty/chromium/third_party/skia/include/pdf -I../../../src/3rdparty/chromium/third_party/skia/include/gpu -I../../../src/3rdparty/chromium/third_party/skia/include/lazy -I../../../src/3rdparty/chromium/third_party/skia/include/pathops -I../../../src/3rdparty/chromium/third_party/skia/include/pipe -I../../../src/3rdparty/chromium/third_party/skia/include/ports -I../../../src/3rdparty/chromium/third_party/skia/include/utils -I../../../src/3rdparty/chromium/skia/ext -I../../../src/3rdparty/chromium/third_party/WebKit -I../../../src/3rdparty/chromium/third_party/icu/source/common -I../../../src/3rdparty/chromium/third_party/npapi -I../../../src/3rdparty/chromium/third_party/npapi/bindings -I../../../src/3rdparty/chromium/third_party/icu/source/i18n -Igen/ui/gl -I../../../src/3rdparty/chromium/third_party/mesa/src/include -I../../../src/3rdparty/chromium/v8/include -fstack-protector --param=ssp-buffer-size=4  -pthread -fno-strict-aliasing -Wno-unused-parameter -Wno-missing-field-initializers -fvisibility=hidden -pipe -fPIC -Wno-unused-local-typedefs -pipe -O2 -I/opt/include/libdrm -I/usr/include -fno-exceptions -W -D_REENTRANT -pthread -I/usr/include/glib-2.0 -I/usr/lib/i386-linux-gnu/glib-2.0/include -I/usr/include -I/usr/include -I/usr/include/freetype2 -I/usr/include -I/usr/include/freetype2 -Wno-format -Wno-unused-result -msse2 -mfpmath=sse -mmmx -m32 -O2 -fno-ident -fdata-sections -ffunction-sections -funwind-tables -fno-exceptions -fno-rtti -fno-threadsafe-statics -fvisibility-inlines-hidden -pipe -O2 -I/opt/include/libdrm -I/usr/include -fno-exceptions -Wall -W -D_REENTRANT -Wno-deprecated -std=gnu++11 -Wno-narrowing -Wno-literal-suffix  -c ../../../src/core/chromium_gpu_helper.cpp -o obj/src/core/QtWebEngineCore.chromium_gpu_helper.o
In file included from /opt/include/GL/gl.h:2055:0,
                 from /srcbuild/qtwebengine/src/3rdparty/chromium/ui/gl/gl_bindings.h:13,
                 from /srcbuild/qtwebengine/src/3rdparty/chromium/gpu/command_buffer/service/async_pixel_transfer_delegate.h:16,
                 from /srcbuild/qtwebengine/src/3rdparty/chromium/gpu/command_buffer/service/texture_manager.h:16,
                 from ../../../src/core/chromium_gpu_helper.cpp:47:
/opt/include/GL/glext.h:468:19: error: conflicting declaration ‘typedef ptrdiff_t GLsizeiptr’
 typedef ptrdiff_t GLsizeiptr;
                   ^
In file included from /srcbuild/qtwebengine/src/3rdparty/chromium/gpu/command_buffer/service/context_group.h:16:0,
                 from /srcbuild/qtwebengine/src/3rdparty/chromium/content/common/gpu/gpu_command_buffer_stub.h:21,
                 from /srcbuild/qtwebengine/src/3rdparty/chromium/content/common/gpu/gpu_channel.h:18,
                 from /srcbuild/qtwebengine/src/3rdparty/chromium/content/gpu/gpu_child_thread.h:18,
                 from ../../../src/core/chromium_gpu_helper.cpp:45:
/srcbuild/qtwebengine/src/3rdparty/chromium/gpu/command_buffer/common/gles2_cmd_format.h:48:26: note: previous declaration as ‘typedef khronos_ssize_t GLsizeiptr’
 typedef khronos_ssize_t  GLsizeiptr;
                          ^
In file included from /opt/include/GL/gl.h:2055:0,
                 from /srcbuild/qtwebengine/src/3rdparty/chromium/ui/gl/gl_bindings.h:13,
                 from /srcbuild/qtwebengine/src/3rdparty/chromium/gpu/command_buffer/service/async_pixel_transfer_delegate.h:16,
                 from /srcbuild/qtwebengine/src/3rdparty/chromium/gpu/command_buffer/service/texture_manager.h:16,
                 from ../../../src/core/chromium_gpu_helper.cpp:47:
/opt/include/GL/glext.h:469:19: error: conflicting declaration ‘typedef ptrdiff_t GLintptr’
 typedef ptrdiff_t GLintptr;
                   ^
In file included from /srcbuild/qtwebengine/src/3rdparty/chromium/gpu/command_buffer/service/context_group.h:16:0,
                 from /srcbuild/qtwebengine/src/3rdparty/chromium/content/common/gpu/gpu_command_buffer_stub.h:21,
                 from /srcbuild/qtwebengine/src/3rdparty/chromium/content/common/gpu/gpu_channel.h:18,
                 from /srcbuild/qtwebengine/src/3rdparty/chromium/content/gpu/gpu_child_thread.h:18,
                 from ../../../src/core/chromium_gpu_helper.cpp:45:
/srcbuild/qtwebengine/src/3rdparty/chromium/gpu/command_buffer/common/gles2_cmd_format.h:47:26: note: previous declaration as ‘typedef khronos_intptr_t GLintptr’
 typedef khronos_intptr_t GLintptr;
                          ^
ninja: build stopped: subcommand failed.
Makefile.gyp_run:338: recipe for target 'invoke_ninja' failed
make[3]: *** [invoke_ninja] Error 1
make[3]: Leaving directory '/srcbuild/qtwebengine/src/core'
Makefile:63: recipe for target 'sub-gyp_run-pro-make_first' failed
make[2]: *** [sub-gyp_run-pro-make_first] Error 2
make[2]: Leaving directory '/srcbuild/qtwebengine/src/core'
Makefile:48: recipe for target 'sub-core-make_first' failed
make[1]: *** [sub-core-make_first] Error 2
make[1]: Leaving directory '/srcbuild/qtwebengine/src'
Makefile:44: recipe for target 'sub-src-make_first' failed
make: *** [sub-src-make_first] Error 2
PackageCompileSource finished in 22638 seconds
| For Gerrit Dashboard: QTBUG-44240 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 111564,6 | Prevent conflicting declaration errors of GL typedefs | 5.5 | qt/qtwebengine | Status: MERGED | +2 | 0 |