Prevent conflicting declaration errors of GL typedefs

Including gpu/command_buffer headers in Qt code pollute by
including ui/gl/gl_bindings.h which pulls in system GL headers.
This will cause conflicting declaration of typedefs when included
together with content/gpu and content/common/gpu headers which
pull in gles2_cmd_format.h that forward declares some GL types.

Although the gl_bindings.h header states in a comment that
it should only be included in source files, the inline
implementation of texture_manager.h and some other low-level
GL integration headers nonetheless require gl_bindings.h,
which unfortunately cascades through to our core layer and
may cause problems when Qt code is compiled.

Since getting rid of this include in Chromium's headers is not
feasible due to maintenance costs, making sure that in Qt code
gpu/command_buffer headers are included before content/gpu and
content/common/gpu headers and guarding forward declarations
in gpu/command_buffer/common/gles2_cmd_format.h should be
a sufficient workaround. We can however get rid of the polluting
includes in src/core/gl_surface_qt.cpp, which only requires
forward declarations.

This also includes a SHA1 update for the Chromium submodule.

Task-number: QTBUG-44240
Change-Id: I5813a3663d36e2b565e4fd7f429add7b6f8f8a69
Reviewed-by: Michael Brüning <michael.bruning@theqtcompany.com>